apps/influxdb/influxdb-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ext
  labels:
    type: external
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  tls:
    - hosts:
        - "influxdb.{hostname}"
      secretName: home-assistant.ing.cert
  rules:
    - host: "influxdb.{hostname}"
      http:
        paths:
          - backend:
              service:
                name: influxdb
                port:
                  number: 8086
            path: /
            pathType: Prefix
