apps/influxdb/influxdb-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-local
  labels:
    type: local
spec:
  rules:
    - host: influxdb.local
      http:
        paths:
          - backend:
              service:
                name: influxdb
                port:
                  number: 8086
            path: /
            pathType: Prefix
